--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<side-nav>
+<app-nav>
   <content-manager></content-manager>
-</side-nav>
+</app-nav>
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 
