Table: initialCol: icon added

--- a/src/app/contact-manager/contact-manager.component.html
+++ b/src/app/contact-manager/contact-manager.component.html
@@ -131,7 +131,12 @@
         </td>
         <td>
           <span class="d-none-mn-md font-weight-bold w-25">Initial</span>
-          Quote
+          <span class="text-center">
+            <div title="Quote" aria-label="Quote">
+              <fa-icon [icon]="quoteIcon" [fixedWidth]="true" size=""></fa-icon>
+            </div>
+            <span class="sr-only">Quote</span>
+          </span>
         </td>
         <td>
           <span class="d-none-mn-md font-weight-bold w-25">Date</span>
