--- a/src/app/contact-manager/contact-manager.component.scss
+++ b/src/app/contact-manager/contact-manager.component.scss
@@ -25,6 +25,7 @@ tr td {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  vertical-align: middle;
 }
 
 @include media-breakpoint-up(md) {
