Paddingx zero for center icons, condensed menu

--- a/src/app/app-nav/app-nav.component.html
+++ b/src/app/app-nav/app-nav.component.html
@@ -71,7 +71,7 @@
         <li class="d-flex justify-content-between text-center" [class.flex-md-column]="largeMenuCondensed">
           <div *ngFor="let option of plainOptions; let i = index" class="flex-fill">
             <div class="nav-item card cursor-pointer">
-              <div class="nav-link d-flex flex-column"
+              <div class="nav-link d-flex flex-column px-0"
                    (click)="resetCondensed()"
                    tabindex="0"
                    role="button"
