Y scroll issue fixed and potential chrome x scroll fix

--- a/src/app/app-nav/app-nav.component.html
+++ b/src/app/app-nav/app-nav.component.html
@@ -58,7 +58,7 @@
     </div>
   </div>
 
-  <div class="d-flex flex-column-max-sm">
+  <div class="d-flex flex-column-max-sm h-100 overflow-auto">
     <!-- Navigation Bar : Accessible, Mobile, Responsive -->
     <nav class="nav-wrapper nav-bg"
          [class.d-md-flex]="largeMenuCondensed"
@@ -142,8 +142,10 @@
         </li>
       </ul>
     </nav>
-    <div class="px-0 px-md-4 pt-2 {{!largeMenuCondensed ? 'm-275px' : 'm-65px'}} overflow-auto">
-      <ng-content></ng-content>
+    <div class="{{!largeMenuCondensed ? 'p-275px' : 'p-65px'}} w-100">
+      <div class="px-0 px-md-4 pt-2">
+        <ng-content></ng-content>
+      </div>
     </div>
   </div>
 </div>
