--- a/src/app/contact-manager/contact-manager.component.html
+++ b/src/app/contact-manager/contact-manager.component.html
@@ -13,7 +13,7 @@
   </div>
 </div>
 
-<div class="card">
+<div class="card pb-5">
   <div class="d-flex justify-content-md-between flex-column-max-sm justify-content-center my-2 mx-1">
     <div class="d-flex flex-nowrap mr-1 d-md-none">
       <div class="input-group">
