Overflow testing: no weird double scroll on chrome linux

--- a/src/app/app-nav/app-nav.component.scss
+++ b/src/app/app-nav/app-nav.component.scss
@@ -142,3 +142,7 @@ li[tabindex='0']:focus {
   @include aria-focus();
 }
 
+.custom-overflow {
+  overflow-x: hidden !important;
+  overflow-y: auto !important;
+}
