--- a/src/app/app-nav/app-nav.component.html
+++ b/src/app/app-nav/app-nav.component.html
@@ -58,7 +58,7 @@
     </div>
   </div>
 
-  <div class="d-flex flex-column-max-sm h-100 overflow-auto">
+  <div class="d-flex flex-column-max-sm h-100 custom-overflow">
     <!-- Navigation Bar : Accessible, Mobile, Responsive -->
     <nav class="nav-wrapper nav-bg"
          [class.d-md-flex]="largeMenuCondensed"
